# system-design-demo-projects

./: .gitignore  CLAUDE.md  README.md  dump.rdb
google-drive-demo/: README.md  config.py  database.py  main.py  pyproject.toml  storage.py
google-drive-demo/routers/: download.py  upload.py
rate-limiter-demo/: README.md  config.py  main.py  middleware.py  pyproject.toml  rate_limit_config.yaml
rate-limiter-demo/limiter/: __init__.py  base.py  factory.py  fixed_window.py  leaking_bucket.py  sliding_window_counter.py  sliding_window_log.py  token_bucket.py
