[project]
name = "google-drive-demo"
version = "0.1.0"
description = "Google Drive-like file storage demo with S3 chunking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "boto3>=1.35.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
    "botocore[crt]>=1.42.76",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
